Add async await GetMoves and Dynamic path for iso folders

--- a/3DCanvasApp/App.xaml
+++ b/3DCanvasApp/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="CanvasTest.App"
+﻿<Application x:Class="Canvas3DViewer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CanvasTest"
+             xmlns:local="clr-namespace:Canvas3DViewer"
              StartupUri="Window1.xaml">
     <Application.Resources>
          
