--- a/3DCanvasApp/Window1.xaml
+++ b/3DCanvasApp/Window1.xaml
@@ -1,42 +1,47 @@
-﻿<Window x:Class="CanvasTest.Window1"
+﻿<Window x:Class="Canvas3DViewer.Window1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CanvasTest"
+        xmlns:local="clr-namespace:Canvas3DViewer"
         mc:Ignorable="d"
-        Title="Window1" Height="450" Width="800" Loaded="Window_Loaded">
+        Title="Window1" Height="450" Width="800" Loaded="Window_Loaded" FontFamily="Comfortaa">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200*"/>
-            <ColumnDefinition Width="673*"/>
+            <ColumnDefinition Width="230*"/>
+            <ColumnDefinition Width="800*"/>
         </Grid.ColumnDefinitions>
-        <Canvas Grid.Column="1" ClipToBounds="True" x:Name="canvas1" Background="#2d2d2d" MouseDown="canvas1_MouseDown" MouseMove="canvas1_MouseMove" MouseWheel="canvas1_MouseWheel" />
-        <Grid>
+
+        <Grid Grid.Column="0">
             <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+
                 <RowDefinition Height="150*"/>
-                <RowDefinition Height="51*"/>
+                <RowDefinition Height="30*"/>
             </Grid.RowDefinitions>
-            <ListView ItemsSource="{Binding IsoFiles}" SelectionChanged="ListView_SelectionChanged">
+
+            <TextBox Grid.Row="0" VerticalContentAlignment="Center" Text="" x:Name="txtIsoPrograms" Background="AliceBlue" TextInput="txtIsoPrograms_TextInput" TextChanged="txtIsoPrograms_TextChanged" />
+            <ListView Grid.Row="1" ItemsSource="{Binding IsoFiles}" SelectionChanged="ListView_SelectionChanged">
 
             </ListView>
-            <StackPanel Grid.Row="1" VerticalAlignment="Top" Margin="10">
-                <TextBlock Text="ww" x:Name="lbl" TextWrapping="Wrap" Margin="5,0" HorizontalAlignment="Left" Width="150" />
-                <TextBlock Text="" x:Name="txtLine" TextWrapping="Wrap"  Margin="5,0" HorizontalAlignment="Left" Width="150" MouseLeftButtonDown="txtLine_MouseLeftButtonDown"/>
+            <StackPanel Grid.Row="2" VerticalAlignment="Top" Margin="10">
+                <TextBlock Text="" x:Name="lbl" TextWrapping="Wrap" Margin="5,0" HorizontalAlignment="Left" Width="150" />
+                <TextBlock Text="" x:Name="txtLine" Margin="5,0" HorizontalAlignment="Left" Width="150" MouseLeftButtonDown="txtLine_MouseLeftButtonDown"/>
                 <TextBlock Text="" x:Name="txtLineNumber" TextWrapping="Wrap"  Margin="5,0" HorizontalAlignment="Left" Width="150"/>
-                
-                <TextBlock Text="" x:Name="txtSP" TextWrapping="Wrap" HorizontalAlignment="Left"  Margin="5,0"/>
-                <TextBlock Text="" x:Name="txtVP" TextWrapping="Wrap" HorizontalAlignment="Left"  Margin="5,0"/>
-                <TextBlock Text="" x:Name="txtEP" TextWrapping="Wrap" HorizontalAlignment="Left"  Margin="5,0"/>
+
+                <TextBlock Text="" x:Name="txtSP" HorizontalAlignment="Left"  Margin="5,0"/>
+                <TextBlock Text="" x:Name="txtVP" HorizontalAlignment="Left"  Margin="5,0"/>
+                <TextBlock Text="" x:Name="txtEP" HorizontalAlignment="Left"  Margin="5,0"/>
 
             </StackPanel>
-
-
-
         </Grid>
+
+
+        <Canvas Grid.Column="1" ClipToBounds="True" x:Name="canvas1" Background="#2d2d2d" MouseDown="canvas1_MouseDown" MouseMove="canvas1_MouseMove" MouseWheel="canvas1_MouseWheel" />
+
 
     </Grid>
 </Window>
